Fix line number alignment

--- a/frontend/src/metabase/query_builder/components/expressions/Editor/Editor.module.css
+++ b/frontend/src/metabase/query_builder/components/expressions/Editor/Editor.module.css
@@ -56,7 +56,6 @@
 
     .cm-gutter {
       background-color: var(--mb-color-bg-light);
-      padding-top: 3px;
     }
 
     .cm-gutterElement {
